--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,3 +113,150 @@ jobs:
           ServiceControl_TESTS_FILTER: ${{ matrix.test-category }}
           PARTICULARSOFTWARE_LICENSE: ${{ secrets.LICENSETEXT }}
           AZURE_ACI_CREDENTIALS: ${{ secrets.AZURE_ACI_CREDENTIALS }}
+
+  containers:
+    if: ${{ github.actor != 'dependabot[bot]' }}
+    uses: ./.github/workflows/build-containers.yml
+  db-containers:
+    if: ${{ github.actor != 'dependabot[bot]' }}
+    uses: ./github/workflows/build-db-container.yml
+
+  container-test:
+    if: ${{ github.actor != 'dependabot[bot]' }}
+    name: container-test-${{ matrix.name}}
+    needs: [ 'containers', 'db-container' ]
+    runs-on: ubuntu-22.04
+    defaults:
+      run:
+        shell: bash
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - name: rabbit
+            transport: RabbitMQ.QuorumConventionalRouting
+            connection-string: 'host=transport'
+          - name: mssql
+            transport: SQLServer
+            connection-string: 'Server=transport;Database=master;User=sa;Password=ServiceControl1!;Encrypt=False;'
+          - name: asb
+            transport: NetStandardAzureServiceBus
+          - name: asq
+            transport: AzureStorageQueue
+          - name: sqs
+            transport: AmazonSQS
+            connection-string: 'AccessKeyId=demo;SecretAccessKey=demo;Region=us-east-1'
+    steps:
+      - name: Check for secrets
+        env:
+          SECRETS_AVAILABLE: ${{ secrets.SECRETS_AVAILABLE }}
+        shell: pwsh
+        run: exit $(If ($env:SECRETS_AVAILABLE -eq 'true') { 0 } Else { 1 })
+      - name: Checkout
+        uses: actions/checkout@v4.1.7
+        with:
+          fetch-depth: 0
+      - name: Install MinVer CLI
+        run: dotnet tool install --global minver-cli
+      - name: Determine versions
+        shell: pwsh
+        run: |
+          # Read settings from Custom.Build.props
+          [xml]$xml = Get-Content ./src/Custom.Build.props
+          $minMajorMinor = $xml.selectNodes('/Project/PropertyGroup/MinVerMinimumMajorMinor').InnerText
+          $autoIncrement = $xml.selectNodes('/Project/PropertyGroup/MinVerAutoIncrement').InnerText
+          echo "MinVerMinimumMajorMinor=$minMajorMinor, MinVerAutoIncrement=$autoIncrement"
+          if (-not ($minMajorMinor -and $autoIncrement)) {
+            throw "Missing MinVer settings in Custom.Build.props"
+          }
+
+          # Execute MinVer
+          echo "MinVerVersion=$(minver --minimum-major-minor $minMajorMinor --auto-increment $autoIncrement)" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
+      - name: Validate build version
+        if: ${{ github.event_name == 'push' && github.ref_type == 'tag' }}
+        uses: ./.github/actions/validate-version
+        with:
+          version: ${{ env.MinVerVersion }}
+      - name: Log in to GitHub container registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      - name: Azure Login
+        if: ${{ matrix.name == 'asb' || matrix.name == 'asq' }}
+        uses: azure/login@v2.1.1
+        with:
+          creds: ${{ secrets.AZURE_ACI_CREDENTIALS }}
+      - name: Setup Azure Service Bus
+        if: ${{ matrix.name == 'asb' }}
+        uses: Particular/setup-azureservicebus-action@v2.0.0
+        with:
+          connection-string-name: ConnectionString
+          azure-credentials: ${{ secrets.AZURE_ACI_CREDENTIALS }}
+          tag: ServiceControlContainerTest
+      - name: Setup Azure Storage
+        if: ${{ matrix.name == 'asq' }}
+        uses: Particular/setup-azurestorage-action@v2.0.0
+        with:
+          connection-string-name: ConnectionString
+          azure-credentials: ${{ secrets.AZURE_ACI_CREDENTIALS }}
+          tag: ServiceControlContainerTest
+      - name: Run Docker Compose
+        shell: bash
+        run: |
+          echo 'Creating .env file'
+          cd src/compose-test
+          echo 'SERVICECONTROL_TAG=${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || env.MinVerVersion }}' > .env
+          echo 'TRANSPORTTYPE=${{ matrix.transport }}' >> .env
+          echo 'CONNECTIONSTRING="${{ matrix.connection-string || env.ConnectionString }}"' >> .env
+          echo 'AWS_ENDPOINT_URL=http://transport:4566' >> .env
+          cat .env
+          echo ''
+          echo '--------------------'
+
+          echo 'Adding ${{matrix.name}} transport configuration to compose.yml'
+          echo '' >> compose.yml
+          echo '' >> compose.yml
+          cat ${{ matrix.name }}.yml >> compose.yml
+          cat compose.yml
+          echo ''
+          echo '--------------------'
+
+          echo 'Starting services...'
+          docker compose up -d
+          echo 'Docker compose complete'
+      - name: Wait for container health
+        shell: pwsh
+        run: |
+          echo "Waiting up to 60 seconds for containers to become healthy"
+          for ($i=0; $i -le 60; $i++) {
+            $numHealthy = (docker ps -f health=healthy | Measure-Object -Line).Lines - 1
+            echo "Currently $numHealthy healthy containers"
+            if ($numHealthy -eq 5) {
+                break;
+            }
+            sleep 1
+          }
+      - name: Inspect transport container
+        run: docker inspect service-platform-transport-1
+      - name: Primary instance logs
+        run: docker logs service-platform-servicecontrol-1
+      - name: Error instance logs
+        run: docker logs service-platform-servicecontrol-audit-1
+      - name: Monitoring instance logs
+        run: docker logs service-platform-servicecontrol-monitoring-1
+      - name: Query running containers
+        shell: pwsh
+        run: |
+          docker ps --all
+
+          $return = 0
+          # Subtract 1 for headers
+          $numHealthy = (docker ps -f health=healthy | Measure-Object -Line).Lines - 1
+
+          # Should be 1 for transport + 1 for DB + 3 instances = 5
+          echo "Found $numHealthy healthy containers out of 5"
+          if ($numHealthy -ne 5) {
+            $return = 1
+          }
+
+          cd src/compose-test
+          docker compose down
+          exit $return
