--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,9 +117,11 @@ jobs:
   containers:
     if: ${{ github.actor != 'dependabot[bot]' }}
     uses: ./.github/workflows/build-containers.yml
+    secrets: inherit
   db-container:
     if: ${{ github.actor != 'dependabot[bot]' }}
     uses: ./.github/workflows/build-db-container.yml
+    secrets: inherit
 
   container-test:
     if: ${{ github.actor != 'dependabot[bot]' }}
