--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,3 +113,16 @@ jobs:
           ServiceControl_TESTS_FILTER: ${{ matrix.test-category }}
           PARTICULARSOFTWARE_LICENSE: ${{ secrets.LICENSETEXT }}
           AZURE_ACI_CREDENTIALS: ${{ secrets.AZURE_ACI_CREDENTIALS }}
+
+  windows-installer:
+    if: ${{ github.actor != 'dependabot[bot]' }}
+    uses: ./.github/workflows/build-windows.yml
+    secrets: inherit
+  containers:
+    if: ${{ github.actor != 'dependabot[bot]' }}
+    uses: ./.github/workflows/build-containers.yml
+    secrets: inherit
+  db-container:
+    if: ${{ github.actor != 'dependabot[bot]' }}
+    uses: ./.github/workflows/build-db-container.yml
+    secrets: inherit
