--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,7 +1,7 @@
 on:
   workflow_call:
 jobs:
-  windows:
+  build:
     if: ${{ github.actor != 'dependabot[bot]' }}
     runs-on: windows-2022
     steps:
